# MemoryGym

./: .dockerignore  .env.example  .gitignore  AUDIT.md  AUTOPILOT.md  CLAUDE.md  Dockerfile  EVAL_QUEUE.md  LEADERBOARD.md  README.md  ROADMAP.md  env.py  eval.py  pyproject.toml
.evomesh/: blueprint.md  project.yaml  status.md
.evomesh/shared/: decisions.md  maintenance_analysis.md
devlog/: 2026-03-09-memory-benchmark-research.md  2026-03-09-red-team-audit.md  2026-03-09-v2-design.md  2026-03-21-system-critique.md  grpo-v2.md  grpo-v3.md  sft-baseline.md  sft-v2b.md  sft-v3.md
docs/: Design.md  ROADMAP.md  STATUS_REPORT.md  STRATEGIC_BLUEPRINT.md  anti-cheat.md  design.md  lessons-learned.md  memorybench-overview-zh.md  memorygym-overview-zh.md
eval/: report_gpt-oss-120b_vs_qwen3-32b.md
memorybench/: __init__.py  __main__.py  bench.py  cli.py  cli_display.py  config.py  protocol.py  simulation.py  training.py
memorybench/agents/: llm_agent.py  stream_agent.py
memorybench/domains/: __init__.py  base.py  logistics.py  names.py  organization.py  research.py
memorybench/evaluation/: __init__.py  backend_bench.py  llm_judge.py  scorer.py  validators.py
memorybench/generation/: __init__.py  questions.py  scenario.py  task_stream.py
memorybench/inspect_task/: __init__.py  scorer.py  solver.py  task.py  tools.py
memorybench/memory/: __init__.py  budget.py  mcp_server.py  store.py
memorybench/simulation/: __init__.py  agents.py
memorybench/worlds/: __init__.py  base.py  city.py  company.py  eval_scorer.py  eval_task.py  hospital.py  (+2 more)
memorygym/: __init__.py  __main__.py  bench.py  config.py  env.py  protocol.py  simulation.py  training.py
scripts/: affinetes_build.py  affinetes_example.py  analyze_trajectory.py  batch_eval.py  generate_sft_data.py  generate_train_data.py  grpo_train.py  leaderboard.py  memorygym_agent.yaml  sft_train.py  smoke_rollout.py  smoke_test_gpu.py  test_sft_inference.py  train.py  verl_curriculum.yaml  verl_memorygym.yaml
sessions/: AUDITOR.md  EVALUATOR.md  EXECUTOR.md  TRAINER.md  WRITER.md
tests/: test_adapters.py  test_affent_agent.py  test_backend_bench.py  test_bench.py  test_config.py  test_container_stress.py  test_env.py  test_eval_task.py  test_llm_judge.py  test_markdown_backend.py  test_narrative.py  test_new_dtypes.py  test_path_consistency.py  test_protocol.py  test_reasoning_coverage.py  test_stream_agent.py  test_training.py  test_validators.py  test_worlds.py  test_worlds_features.py
(+65 files in other folders)
