[project]
name = "memorybench"
version = "0.4.0"
description = "Memory management evaluation for LLM agents"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
    "inspect-ai>=0.3",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
mem0 = ["mem0ai>=0.1"]

[project.scripts]
memorybench = "memorybench.bench:_cli_entry"

[tool.setuptools.packages.find]
include = ["memorybench*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
