[project]
name = "memorygym"
version = "0.10.32"
description = "Memory management evaluation for LLM agents"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
    "inspect-ai>=0.3",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "rank-bm25>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
affinetes = ["affinetes>=0.2"]

[project.scripts]
memorygym = "memorygym.bench:_cli_entry"

[tool.setuptools.packages.find]
include = ["memorygym*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
markers = ["slow: marks tests as slow (>10s), deselect with -m 'not slow'"]
